--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -30,12 +30,14 @@ force_try: warning
 identifier_name:
     allowed_symbols: "_"
     excluded:
+        - ts
+        - ID
         - id
         - no
         - ok
 line_length:
-    warning: 180
-    error: 200
+    warning: 200
+    error: 220
     ignores_function_declarations: true
     ignores_comments: true
     ignores_urls: true
@@ -53,6 +55,7 @@ file_length:
     error: 1500
     ignore_comment_only_lines: true
 cyclomatic_complexity:
+    ignores_case_statements: true
     warning: 15
     error: 30
 reporter: "xcode"
