--- a/Tests/TestHelpers/.swiftlint.yml
+++ b/Tests/TestHelpers/.swiftlint.yml
@@ -3,17 +3,19 @@ disabled_rules:
 - force_cast
 - force_try
 line_length:
-    warning: 250
-    error: 300
+    warning: 300
+    error: 350
     ignores_function_declarations: true
     ignores_comments: true
     ignores_urls: true
     ignores_interpolated_strings: true
+function_parameter_count:
+    warning: 10
 function_body_length:
     warning: 100
     error: 150
 type_body_length:
-    warning: 500
+    warning: 800
     error: 1000
 file_length:
     warning: 1200
@@ -24,4 +26,10 @@ identifier_name:
     excluded:
         - id
         - no
-        - ok
+        - ok  
+    min_length:
+        warning: 1
+cyclomatic_complexity:
+    ignores_case_statements: true
+    warning: 15
+    error: 30
