--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,18 +11,32 @@ workflows:
   version: 2
   build-test-deploy:
     jobs:
-      - build-and-test
+      - restore-cache-install-cocoapods
+      - validate-code:
+          requires:
+            - restore-cache-install-cocoapods
+      - run-unit-test:
+          requires:
+            - validate-code
+      - run-functional-test:
+          requires:
+            - validate-code
+      - run-integration-test:
+          requires:
+            - validate-code
+      - build:
+          requires:
+            - validate-code
 
 jobs:
-
-  build-and-test:
+  restore-cache-install-cocoapods:
     macos:
       xcode: 13.4.0 # Specify the Xcode version to use
 
     steps:
       - checkout
 
-      # restore pods related caches
+        # restore pods related caches
       - restore_cache:
           keys:
             - 1-gems-{{ checksum "Gemfile.lock" }}
@@ -54,13 +68,23 @@ jobs:
       - save_cache:
           name: Saving CocoaPods Cache
           key: cocoapods-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "Podfile.lock" }}
-          paths:
-            - ./Pods
-            - ~/.cocoapods
+            paths:
+              - ./Pods
+              - ~/.cocoapods
 
+    validate-code:
+      - checkout
+        
       - run:
           name: Lint Source Code
           command: make lint
+
+  run-unit-test:
+    macos:
+        xcode: 13.4.0 # Specify the Xcode version to use
+
+    steps:
+      - checkout
 
       # pre-start the simulator to prevent timeouts
       - run:
@@ -68,29 +92,104 @@ jobs:
           command: xcrun instruments -w "iPhone 8 (13.5) [" || true
 
       - run:
-          name: Run iOS Tests
-          command: make test-ios
+          name: Run iOS Unit Tests
+          command: make unit-test-ios
 
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
-           upload_name: Coverage Report for iOS
-           xtra_args: -c -v --xc --xp iosresults.xcresult
+          upload_name: Coverage Report for iOS Unit Tests
+          xtra_args: -c -v --xc --xp iosunittestresults.xcresult
 
       - run:
           name: Pre-start tvOS Simulator
           command: xcrun instruments -w "Apple TV (15.0) [" || true
 
       - run:
-          name: Run tvOS Tests
-          command: make test-tvos
+          name: Run tvOS Unit Tests
+          command: make unit-test-tvos
 
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
-           upload_name: Coverage Report for tvOS
-           xtra_args: -c -v --xc --xp tvosresults.xcresult
+          upload_name: Coverage Report for tvOS Unit Tests
+          xtra_args: -c -v --xc --xp tvosunittestresults.xcresult
 
+    run-functional-test:
+      macos:
+        xcode: 13.4.0 # Specify the Xcode version to use
+
+      steps:
+        - checkout
+        
+        # pre-start the simulator to prevent timeouts
+        - run:
+            name: Pre-start Simulator
+            command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+
+        - run:
+            name: Run iOS Functional Tests
+            command: make functional-test-ios
+
+        # Code coverage upload using Codecov
+        # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+        - codecov/upload:
+            upload_name: Coverage Report for iOS Functional Tests
+            xtra_args: -c -v --xc --xp iosfunctionaltestresults.xcresult
+
+        - run:
+            name: Pre-start tvOS Simulator
+            command: xcrun instruments -w "Apple TV (15.0) [" || true
+
+        - run:
+            name: Run tvOS Functional Tests 
+            command: make functional-test-tvos
+
+        # Code coverage upload using Codecov
+        # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+        - codecov/upload:
+            upload_name: Coverage Report for tvOS Functional Tests
+            xtra_args: -c -v --xc --xp tvosfunctionaltestresults.xcresult
+
+  run-integration-test:
+    macos:
+      xcode: 13.4.0 # Specify the Xcode version to use
+    steps:
+      - checkout
+      # pre-start the simulator to prevent timeouts
+      - run:
+          name: Pre-start Simulator
+          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+
+      - run:
+          name: Run iOS Integration Tests
+          command: make integration-test-ios
+
+      # Code coverage upload using Codecov
+      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+      - codecov/upload:
+            upload_name: Coverage Report for iOS Integration Tests
+            xtra_args: -c -v --xc --xp iosintegrationtestresults.xcresult
+
+      - run:
+          name: Pre-start tvOS Simulator
+          command: xcrun instruments -w "Apple TV (15.0) [" || true
+
+      - run:
+          name: Run tvOS Integration Tests
+          command: make integration-test-tvos
+
+      # Code coverage upload using Codecov
+      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+      - codecov/upload:
+            upload_name: Coverage Report for tvOS Integration Tests
+            xtra_args: -c -v --xc --xp tvosintegrationtestresults.xcresult
+  build:
+    macos:
+      xcode: 13.4.0 # Specify the Xcode version to use
+    
+    steps:
+      - checkout
       # verify XCFramework archive builds
       - run:
           name: Build XCFramework
@@ -99,9 +198,9 @@ jobs:
               make archive
             fi
 
-      # verify demo app builds
+      # verify test app builds
       - run:
-          name: Build Demo App
+          name: Build Test App
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
               make build-app
