Add cocoapods caching and installation in all the steps.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,16 @@ jobs:
           keys:
             - 1-gems-{{ checksum "Gemfile.lock" }}
 
+      # make sure we're on the right version of cocoapods
+      - run:
+          name: Verify Cocoapods Version
+          command: bundle check || bundle install --path vendor/bundle
+
+      # save cocoapods version gem data
+      - save_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
 
       # restore pods related caches
       - restore_cache:
@@ -97,6 +107,14 @@ jobs:
       - run:
           name: Repo Update & Install CocoaPods
           command: make ci-pod-install
+
+      # save pods related files
+      - save_cache:
+          name: Saving CocoaPods Cache
+          key: cocoapods-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "Podfile.lock" }}
+          paths:
+            - ./Pods
+            - ~/.cocoapods
 
       # pre-start the simulator to prevent timeouts
       - run:
@@ -139,6 +157,17 @@ jobs:
           keys:
             - 1-gems-{{ checksum "Gemfile.lock" }}
 
+      # make sure we're on the right version of cocoapods
+      - run:
+          name: Verify Cocoapods Version
+          command: bundle check || bundle install --path vendor/bundle
+
+      # save cocoapods version gem data
+      - save_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
+
       # restore pods related caches
       - restore_cache:
           keys:
@@ -150,6 +179,14 @@ jobs:
       - run:
           name: Repo Update & Install CocoaPods
           command: make ci-pod-install
+
+      # save pods related files
+      - save_cache:
+          name: Saving CocoaPods Cache
+          key: cocoapods-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "Podfile.lock" }}
+          paths:
+            - ./Pods
+            - ~/.cocoapods
 
       # pre-start the simulator to prevent timeouts
       - run:
@@ -187,10 +224,21 @@ jobs:
     steps:
       - checkout
 
-      # restore pods related caches
+       # restore pods related caches
       - restore_cache:
           keys:
             - 1-gems-{{ checksum "Gemfile.lock" }}
+
+      # make sure we're on the right version of cocoapods
+      - run:
+          name: Verify Cocoapods Version
+          command: bundle check || bundle install --path vendor/bundle
+
+      # save cocoapods version gem data
+      - save_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
 
       # restore pods related caches
       - restore_cache:
@@ -204,6 +252,14 @@ jobs:
           name: Repo Update & Install CocoaPods
           command: make ci-pod-install
 
+      # save pods related files
+      - save_cache:
+          name: Saving CocoaPods Cache
+          key: cocoapods-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "Podfile.lock" }}
+          paths:
+            - ./Pods
+            - ~/.cocoapods
+            
       # pre-start the simulator to prevent timeouts
       - run:
           name: Pre-start Simulator
