--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
       - checkout
 
-      <<: *install_depencies
+      <<: *install_dependencies
 
       - run:
           name: Lint Source Code
@@ -88,7 +88,7 @@ jobs:
     steps:
       - checkout
 
-      <<: *install_depencies
+      <<: *install_dependencies
 
       # pre-start the simulator to prevent timeouts
       - run:
@@ -126,7 +126,7 @@ jobs:
     steps:
       - checkout
       
-      <<: *install_depencies
+      <<: *install_dependencies
 
       # pre-start the simulator to prevent timeouts
       - run:
