--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 version: 2.1
 
 orbs:
-   codecov: codecov/codecov@3.2.3
+   codecov: codecov/codecov@3.2.4
 
 # Workflows orchestrate a set of jobs to be run;
 workflows:
@@ -63,6 +63,17 @@ commands:
           paths:
             - ./Pods
 
+  prestart_ios_simulator:
+    steps:
+      - run:
+          name: Pre-start Simulator
+          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+
+  prestart_tvos_simulator:
+    steps:
+      - run:
+          name: Pre-start tvOS Simulator
+          command: xcrun instruments -w "Apple TV (15.0) [" || true
 
 jobs:
   
@@ -80,8 +91,10 @@ jobs:
       - run:
           name: Lint Source Code
           command: make lint
-    
-  unit-test:
+  
+
+
+  unit-test-ios:
     macos:
       xcode: 13.4.0 # Specify the Xcode version to use
 
@@ -91,23 +104,13 @@ jobs:
       - install_dependencies
 
       # pre-start the simulator to prevent timeouts
-      - run:
-          name: Pre-start Simulator
-          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+      - prestart_ios_simulator
 
       - run:
           name: Run iOS Unit Tests
           command: make unit-test-ios
 
-      # Code coverage upload using Codecov
-      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
-      - codecov/upload:
-          upload_name: Coverage Report for iOS Unit Tests
-          xtra_args: -c -v --xc --xp iosunittestresults.xcresult
-
-      - run:
-          name: Pre-start tvOS Simulator
-          command: xcrun instruments -w "Apple TV (15.0) [" || true
+      - prestart_tvos_simulator
 
       - run:
           name: Run tvOS Unit Tests
@@ -115,9 +118,14 @@ jobs:
 
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+       - codecov/upload:
+          upload_name: Coverage Report for iOS Unit Tests
+          xtra_args: -c -v --xc --xp iosunittestresults.xcresult
+    
       - codecov/upload:
           upload_name: Coverage Report for tvOS Unit Tests
           xtra_args: -c -v --xc --xp tvosunittestresults.xcresult
+          
 
   functional-test:
     macos:
@@ -128,24 +136,13 @@ jobs:
       
       - install_dependencies
 
-      # pre-start the simulator to prevent timeouts
-      - run:
-          name: Pre-start Simulator
-          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+      - prestart_ios_simulator
 
       - run:
           name: Run iOS Functional Tests
           command: make functional-test-ios
 
-      # Code coverage upload using Codecov
-      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
-      - codecov/upload:
-          upload_name: Coverage Report for iOS Functional Tests
-          xtra_args: -c -v --xc --xp iosfunctionaltestresults.xcresult
-
-      - run:
-          name: Pre-start tvOS Simulator
-          command: xcrun instruments -w "Apple TV (15.0) [" || true
+      - prestart_tvos_simulator
 
       - run:
           name: Run tvOS Functional Tests 
@@ -154,8 +151,13 @@ jobs:
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
+          upload_name: Coverage Report for iOS Functional Tests
+          xtra_args: -c -v --xc --xp iosfunctionaltestresults.xcresult
+
+      - codecov/upload:
           upload_name: Coverage Report for tvOS Functional Tests
           xtra_args: -c -v --xc --xp tvosfunctionaltestresults.xcresult
+
 
   integration-test:
     macos:
@@ -167,23 +169,13 @@ jobs:
       - install_dependencies
 
       # pre-start the simulator to prevent timeouts
-      - run:
-          name: Pre-start Simulator
-          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+      - prestart_ios_simulator
 
       - run:
           name: Run iOS Integration Tests
           command: make integration-test-ios
-
-      # Code coverage upload using Codecov
-      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
-      - codecov/upload:
-          upload_name: Coverage Report for iOS Integration Tests
-          xtra_args: -c -v --xc --xp iosintegrationtestresults.xcresult
-
-      - run:
-          name: Pre-start tvOS Simulator
-          command: xcrun instruments -w "Apple TV (15.0) [" || true
+      
+      - prestart_tvos_simulator
 
       - run:
           name: Run tvOS Integration Tests
@@ -192,8 +184,13 @@ jobs:
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
+          upload_name: Coverage Report for iOS Integration Tests
+          xtra_args: -c -v --xc --xp iosintegrationtestresults.xcresult
+
+      - codecov/upload:
           upload_name: Coverage Report for tvOS Integration Tests
           xtra_args: -c -v --xc --xp tvosintegrationtestresults.xcresult
+          
 
   build_xcframework_and_app:
     macos:
