--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,14 +102,14 @@ jobs:
       - prestart_ios_simulator
 
       - run:
-          name: Run iOS Unit Tests
+          name: Run iOS Tests
           command: make test-ios
 
       # Code coverage upload using Codecov
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
           upload_name: Coverage Report for iOS Unit Tests
-          xtra_args: -c -v --xc --xp iosresults.xcresult
+          xtra_args: -c --xc --xp iosresults.xcresult
           
 
   test-tvos:
@@ -131,7 +131,7 @@ jobs:
       # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
           upload_name: Coverage Report for tvOS Tests
-          xtra_args: -c -v --xc --xp tvosresults.xcresult
+          xtra_args: -c --xc --xp tvosresults.xcresult
 
   build_xcframework_and_app:
     macos:
