--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,13 +64,13 @@ commands:
     steps:
       - run:
           name: Pre-start Simulator
-          command: xcrun instruments -w "iPhone 8 (13.5) [" || true
+          command: xcrun simctl boot 'iPhone 8'  || true
 
   prestart_tvos_simulator:
     steps:
       - run:
           name: Pre-start tvOS Simulator
-          command: xcrun instruments -w "Apple TV (15.0) [" || true
+          command: xcrun simctl boot 'Apple TV' || true
 
 jobs:
   
