--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ workflows:
       - build_xcframework_and_app:
           requires:
             - validate-code
+      - upload_coverage:
+          requires:
+            - test-ios
+            - test-tvos
 
 commands: 
   install_dependencies:
@@ -108,15 +112,7 @@ jobs:
       - run:
           name: Run iOS Tests
           command: make test-ios
-
-      # Code coverage upload using Codecov
-      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
-      - codecov/upload:
-          flags: ios-tests
-          upload_name: Coverage Report for iOS Tests
-          xtra_args: -c -v --xc --xp iosresults.xcresult
           
-
   test-tvos:
     macos:
       xcode: 13.4.0 # Specify the Xcode version to use
@@ -133,12 +129,13 @@ jobs:
           name: Run tvOS Tests 
           command: make test-tvos
 
-      # Code coverage upload using Codecov
-      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+  # Code coverage upload using Codecov
+  # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+  upload_coverage:
+    steps:
       - codecov/upload:
-          flags: tvos-tests
-          upload_name: Coverage Report for tvOS Tests
-          xtra_args: -c -v --xc --xp tvosresults.xcresult
+          upload_name: Coverage Report for AEPEdgeMedia
+          xtra_args: -c -v --xc --xp coverage
 
   build_xcframework_and_app:
     macos:
