--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,6 @@ workflows:
       - build_xcframework_and_app:
           requires:
             - validate-code
-      - upload_coverage:
-          requires:
-            - test-ios
-            - test-tvos
 
 commands: 
   install_dependencies:
@@ -112,7 +108,15 @@ jobs:
       - run:
           name: Run iOS Tests
           command: make test-ios
+
+      # Code coverage upload using Codecov
+      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
+      - codecov/upload:
+          flags: ios-tests
+          upload_name: Coverage Report for iOS Tests
+          xtra_args: -c -v --xc --xp iosresults.xcresult
           
+
   test-tvos:
     macos:
       xcode: 13.4.0 # Specify the Xcode version to use
@@ -129,16 +133,12 @@ jobs:
           name: Run tvOS Tests 
           command: make test-tvos
 
-  # Code coverage upload using Codecov
-  # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
-  upload_coverage:
-    macos:
-      xcode: 13.4.0 # Specify the Xcode version to use
-
-    steps:
+      # Code coverage upload using Codecov
+      # See options explanation here: https://docs.codecov.com/docs/codecov-uploader
       - codecov/upload:
-          upload_name: Coverage Report for AEPEdgeMedia
-          xtra_args: -c -v --xc --xp coverage/*.xcresult
+          flags: tvos-tests
+          upload_name: Coverage Report for tvOS Tests
+          xtra_args: -c -v --xc --xp tvosresults.xcresult
 
   build_xcframework_and_app:
     macos:
