--- a/Tests/.swiftlint.yml
+++ b/Tests/.swiftlint.yml
@@ -21,7 +21,10 @@ file_length:
     warning: 1200
     error: 1500
     ignore_comment_only_lines: true
-identifier_name:
+identifier_name:  
+    max_length:
+        warning: 50
+        error: 60   
     allowed_symbols: "_"
     excluded:
         - id
