--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,8 +114,7 @@ jobs:
       - codecov/upload:
           flags: ios-tests
           upload_name: Coverage Report for iOS Tests
-          xtra_args: -c -v --xc --xp iosresults.xcresult
-          version: v0.5.0
+          xtra_args: -c -v --xc --xp iosresults.xcresult -C $CIRCLE_SHA1
           
 
   test-tvos:
